--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <hr>
     <h3>Script para perder salud</h3>
     <textarea cols='80' rows='7' id="codigo">
-        --// 1.Coloca el script en cada parte del modelo
-             2.Cambia el valor de la variable y ejecuta para ver el resultado // 
+        --// 1.Coloca el script en cada parte del modelo 2.Cambia el valor de la variable y ejecuta para ver el resultado // 
 
         script.Parent.Touched:Connect(function(hit)
             hit.Parent.Humanoid.Health=hit.Parent.Humanoid.Health - 5 
@@ -32,8 +31,7 @@
     <hr>
     <h3>Script de velocidad</h3>
     <textarea cols='80' rows='7' id="codigo2">
-        --// 1.Coloca este script en cada parte del modelo de la poción.
-             2.Cambia el valor de la variable y ejecuta para ver el resultado// 
+        --// 1.Coloca este script en cada parte del modelo 2.Cambia el valor de la variable y ejecuta para ver el resultado// 
 
         script.Parent.Touched:Connect(function(speed)
 	        speed.Parent.Humanoid.WalkSpeed=50
